rubocop-rails導入｜rubocopの指摘に従い修正

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -2,7 +2,6 @@ name: Run rspec, rubocop
 
 on:
   push:
-  pull_request:
 
 jobs:
   rspec:
@@ -13,6 +12,8 @@ jobs:
         image: postgres:latest
         ports:
           - 3306:3306
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
