gem 'letter_opener_web'追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - .:/herigo
     ports:
       - "3000:3000"
+    stdin_open: true
+    tty: true
     depends_on:
       - db
       
